lib/html-macro-test/tests/ui/plaintext-literal-fails.rs

use html_macro::html;

fn test() {
    html! {
        <div>Hello World</div>
    };
}

fn main() {}
